# pydreamplet

./: .gitignore  404.html  CHANGELOG.md  CLAUDE.md  README.md  ROADMAP.md  index.html  mkdocs.yml  my_style.css  mypy.ini  pyproject.toml  sitemap.xml
.github/: FUNDING.yml
.github/workflows/: ci.yml
assets/javascripts/: bundle.50899def.min.js  bundle.79ae519e.min.js  bundle.92b07e13.min.js  bundle.c8b220af.min.js  bundle.f1b6f286.min.js  bundle.f55a23d4.min.js
blog/: index.html
blog/2025/02/11/waffle-chart/: index.html
blog/2025/02/25/line-chart/: index.html
blog/archive/2025/: index.html
blog/category/data-visualization/: index.html
docs/: .gitignore  index.md  nuxt.config.ts  package-lock.json  package.json
docs-nuxt/: nuxt.config.ts
docs-nuxt/.data/content/: contents.sqlite
docs-nuxt/content/getting-started/: index.md
docs/app/: error.vue
docs/app/assets/css/: main.css
docs/app/components/: HummingbirdLogo.vue  SearchButton.vue  SearchDialog.vue  SvgPreview.vue  ThemeToggle.vue  VersionBadge.vue
docs/app/pages/: [...slug].vue  gallery.vue  index.vue
docs/blog/: index.md
docs/blog/posts/: multicolumn-chart.md  waffle-chart.md
docs/content/: drawing-basics.md  index.md  path-basics.md  text-basics.md  transform-basics.md
docs/content/getting-started/: index.md
docs/content/reference/: animation.md  colors.md  creative.md  definitions.md  generators.md  index.md  markers.md  noise.md  paths.md  scales.md  shape-helpers.md  shapes.md  svg-element.md  svg.md  text.md  transforms.md  typography.md  utilities.md  vector.md
docs/content/tutorials/: combo-chart.md  dancing-circles.md  index.md  layered-svg-art.md  line-chart.md  polar-noise.md  waffle-chart.md
docs/getting_started/: basics.md  index.md  tutorial.md  vector_transformations.md  working_with_text.md
docs/reference/: api_design.md
docs/reference/colors/: index.md
docs/reference/core/: animate.md  circle.md  ellipse.md  g.md  line.md  path.md  polygon.md  polyline.md  rect.md  svg.md  svgelement.md  text.md  textonpath.md  transformable.md  types.md
docs/reference/fundamentals/: svg.md  svgelement.md
docs/reference/markers/: index.md  marker.md  predefined_markers.md
docs/reference/math/: vector.md
docs/reference/noise/: simplex.md  simplex2D.md  simplex3D.md
docs/reference/scales/: bandscale.md  circlescale.md  colorscale.md  index.md  linearscale.md  ordinalscale.md  pointscale.md  squarescale.md
docs/reference/shapes/: index.md
docs/reference/typography/: index.md
docs/reference/utils/: index.md
docs/scripts/: generate-seo-files.mjs  patch-generated-seo.mjs
docs/stylesheets/: extra.css
getting_started/: index.html
getting_started/basics/: index.html
getting_started/tutorial/: index.html
getting_started/vector_transformations/: index.html
getting_started/working_with_text/: index.html
legacy_docs/getting_started/: basics.md  index.md  working_with_text.md
legacy_docs/reference/colors/: index.md
legacy_docs/reference/core/: animate.md  circle.md  defs.md  ellipse.md  g.md  line.md  path.md  polygon.md  rect.md  svg.md  text.md  transformable.md
legacy_docs/reference/markers/: marker.md
legacy_docs/reference/math/: vector.md
legacy_docs/reference/noise/: noise.md
legacy_docs/reference/scales/: bandscale.md  ordinalscale.md  pointscale.md
pydreamplet/: __init__.py  colors.py  constants.py  core.py  creative.py  generators.py  markers.py  math.py  noise.py  path_data.py  scales.py  shapes.py  types.py  typography.py  utils.py
reference/colors/: index.html
reference/core/animate/: index.html
reference/core/circle/: index.html
reference/core/ellipse/: index.html
reference/core/g/: index.html
reference/core/line/: index.html
reference/core/path/: index.html
reference/core/polygon/: index.html
reference/core/polyline/: index.html
reference/core/rect/: index.html
reference/core/svg/: index.html
reference/core/svgelement/: index.html
reference/core/text/: index.html
reference/core/textonpath/: index.html
reference/core/transformable/: index.html
reference/core/types/: index.html
reference/markers/marker/: index.html
reference/markers/predefined_markers/: index.html
reference/math/vector/: index.html
reference/noise/noise/: index.html
reference/noise/simplex/: index.html
reference/noise/simplex2D/: index.html
reference/noise/simplex3D/: index.html
reference/scales/: index.html
reference/scales/bandscale/: index.html
reference/scales/circlescale/: index.html
reference/scales/colorscale/: index.html
reference/scales/linearscale/: index.html
reference/scales/ordinalscale/: index.html
reference/scales/pointscale/: index.html
reference/scales/squarescale/: index.html
reference/shapes/: index.html
reference/typography/: index.html
reference/utils/: index.html
search/: search_index.json
stylesheets/: extra.css
tests/: test_doc.py  test_elements.py
tests/feature/: test_colors.py  test_creative.py  test_elements.py  test_font.py  test_generators.py  test_noise.py  test_optional_notebook_dependencies.py  test_public_api.py  test_scales.py  test_shapes.py
tests/feature/elements/: test_animate.py  test_bounding_box.py  test_circle.py  test_defs.py  test_element.py  test_ellipse.py  test_g_element.py  test_markers.py  test_path.py  test_polygon.py  test_rect.py  test_svg.py  test_text.py  test_transform.py  test_use.py
tests/feature/math/: test_vector.py
tests/feature/utils/: test_calculate_ticks.py  test_collision.py  test_force_distance.py  test_sample_uniform.py
