[project]
name = "pydreamplet"
version = "1.1.9"
description = "A versatile Python toolkit for programmatically generating, manipulating, and assembling scalable vector graphics (SVG) images."
authors = [{ name = "Marek Pilczuk", email = "user@mp76.pl" }]
license = "MIT"
readme = "README.md"
keywords = ["svg", "graphics", "design"]
requires-python = ">=3.12"
dependencies = [
    "pillow (>=11.1.0,<12.0.0)",
    "fonttools (>=4.56.0,<5.0.0)",
    "ipython (>=8.32.0,<9.0.0)",
    "ipykernel>=6.30.1",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pydreamplet"]

[tool.hatch.build.targets.wheel.force-include]
"pydreamplet/resources/hummingbird.svg" = "pydreamplet/resources/hummingbird.svg"
"pydreamplet/resources/world_map_iso2.svg" = "pydreamplet/resources/world_map_iso2.svg"
"pydreamplet/resources/world_map_iso3.svg" = "pydreamplet/resources/world_map_iso3.svg"

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "mkdocs-material>=9.6.16",
    "pytest>=8.4.1",
    "ruff>=0.12.8",
]
