[project]
name = "pydreamplet"
version = "2.1.3"
description = "A typed Python library for creating SVG graphics, data visualizations, charts, maps, and generative art."
authors = [{ name = "Marek Pilczuk", email = "user@mp76.pl" }]
license = "MIT"
readme = "README.md"
keywords = [
    "svg",
    "data-visualization",
    "charts",
    "graphics",
    "generative-art",
    "creative-coding",
    "jupyter",
    "vector-graphics",
    "dataviz",
    "visualization",
]
requires-python = ">=3.12"
dependencies = [
    "fonttools (>=4.56.0,<5.0.0)",
    "uharfbuzz>=0.52.0",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Scientific/Engineering :: Visualization",
    "Typing :: Typed",
]

[project.urls]
Documentation = "https://py.dreamplet.com/"
Homepage = "https://py.dreamplet.com/"
Repository = "https://github.com/marepilc/pydreamplet"
"Source Code" = "https://github.com/marepilc/pydreamplet"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pydreamplet"]

[tool.hatch.build.targets.sdist]
exclude = [
    "/docs/.data/**",
    "/docs/.nuxt/**",
    "/docs/.output/**",
    "/docs/dist/**",
    "/docs/node_modules/**",
    "/docs/*.log",
]

[tool.hatch.build.targets.wheel.force-include]
"pydreamplet/py.typed" = "pydreamplet/py.typed"
"pydreamplet/resources/hummingbird.svg" = "pydreamplet/resources/hummingbird.svg"
"pydreamplet/resources/world_map_iso2.svg" = "pydreamplet/resources/world_map_iso2.svg"
"pydreamplet/resources/world_map_iso3.svg" = "pydreamplet/resources/world_map_iso3.svg"

[dependency-groups]
dev = [
    "basedpyright>=1.39.5",
    "mypy>=1.18.2",
    "pytest>=8.4.1",
    "ruff>=0.9.5",
]

[project.optional-dependencies]
notebook = [
    "ipython (>=8.32.0,<9.0.0)",
    "ipykernel>=6.30.1",
]

[tool.basedpyright]
typeCheckingMode = "standard"
include = [
    "pydreamplet",
    "tests",
]
exclude = [
    "**/*.ipynb",
]
reportMissingTypeStubs = false
reportAny = false
reportExplicitAny = false
reportImplicitOverride = false
reportUnannotatedClassAttribute = false
reportUnknownVariableType = false
reportUnusedCallResult = false

[tool.ruff]
line-length = 88
target-version = "py312"
extend-exclude = ["site"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "ISC"]
